# tt-metal

./: migrate_fft_basic.py
tt_metal/programming_examples/: CMakeLists.txt  LICENSE
tt_metal/programming_examples/basic/: CMakeLists.txt  README.md  fft.cpp
tt_metal/programming_examples/basic/kernels/compute/: compute.cpp
tt_metal/programming_examples/basic/kernels/dataflow/: reader.cpp  writer.cpp
tt_metal/programming_examples/basic_copy_opt/: CMakeLists.txt  fft.cpp
tt_metal/programming_examples/basic_copy_opt/kernels/compute/: compute.cpp
tt_metal/programming_examples/basic_copy_opt/kernels/dataflow/: reader.cpp  writer.cpp
tt_metal/programming_examples/basic_fft/: SOP_FFT_Testing.md
tt_metal/programming_examples/basic_fft/fft_single_core/: CMakeLists.txt  fft_single_core.cpp
tt_metal/programming_examples/basic_fft/fft_single_core/kernels/compute/: fft_compute.cpp
tt_metal/programming_examples/chunked/: fft.cpp
tt_metal/programming_examples/chunked/kernels/: constants.h
tt_metal/programming_examples/chunked/kernels/compute/: compute.cpp
tt_metal/programming_examples/chunked/kernels/dataflow/: reader.cpp  writer.cpp
tt_metal/programming_examples/cpu/src/: fft.c
tt_metal/programming_examples/fft/: CMakeLists.txt
tt_metal/programming_examples/fft/fft_single_core/: fft_single_core.cpp
tt_metal/programming_examples/fft_chunked_copy_opt/: Makefile  fft.cpp
tt_metal/programming_examples/fft_chunked_copy_opt/kernels/compute/: compute.cpp
tt_metal/programming_examples/fft_chunked_copy_opt/kernels/dataflow/: writer.cpp
tt_metal/programming_examples/fft_float16/: CMakeLists.txt
tt_metal/programming_examples/fft_float16/fft_single_core/: CMakeLists.txt  fft_single_core.cpp
tt_metal/programming_examples/fft_float32/: CMakeLists.txt
tt_metal/programming_examples/fft_float32/fft_single_core/: CMakeLists.txt  fft_single_core.cpp  ifft_input.txt  sample_input.txt
tt_metal/programming_examples/fft_float32/fft_single_core/kernels/compute/: fft_compute_f32.cpp
tt_metal/programming_examples/fft_float32/fft_single_core/kernels/dataflow/: reader_fft_f32.cpp  writer_fft_f32.cpp
tt_metal/programming_examples/fft_float32_optimized/: CMakeLists.txt  README.md
tt_metal/programming_examples/fft_float32_optimized/fft_single_core/: CMakeLists.txt  fft_single_core.cpp
tt_metal/programming_examples/fft_reference/: CMakeLists.txt  fft.cpp
tt_metal/programming_examples/fft_reference/kernels/compute/: compute.cpp
(+13 files in other folders)
